@@ -1,3 +1,9 @@
+2022-03-08 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/as8xcxxx/ds8mch.c,
+	  sdas/asxxsrc/asxxxx.h:
+	  Fix ASxxxx warnings by merging with upstream for [bugs:#3347].
+
 2022-03-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* .version:
